-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
MacOS X 10.8
-
c8d9b17367cfdcb034d11f8a168ca4ae3993e7c3 764f1a51209212b6fc60cef5c12e9748d06b57de
1. Select "Projects"
2. Select "Run" settings
3. Click on "Add deploy step" - "Custom Process Step"
4. Leave the fields empty - don't enter anything for the Custom process step
5. Try to start the application. It crashes with the following back trace:
(lldb) bt
- thread #1: tid = 0x1c03, 0x0000000100cfbf36 QtCore`QProcessPrivate::waitForStarted(int) + 102, stop reason = EXC_BAD_INSTRUCTION (code=12, subcode=0x0)
frame #0: 0x0000000100cfbf36 QtCore`QProcessPrivate::waitForStarted(int) + 102
frame #1: 0x0000000100cb59b8 QtCore`QProcess::waitForStarted(int) + 24
frame #2: 0x000000010d957334 libProjectExplorer_debug.dylib`ProjectExplorer::AbstractProcessStep::run(this=0x0000000116cce2f0, fi=0x0000000115fa29c8) + 1076 at abstractprocessstep.cpp:207
frame #3: 0x000000010d953de8
- replaces
-
QTBUG-33021 QProcess::waitForStarted crashes if start() failed early
-
- Closed
-
-
QTBUG-33158 Crash in (QProcess (). waitForStarted ())
-
- Closed
-
For Gerrit Dashboard: QTBUG-32958 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
62897,2 | Fix crash in QProcess::waitForStarted() on Unix. | stable | qt/qtbase | Status: MERGED | +2 | 0 |
63907,1 | Fix crash in QProcess::waitForStarted() on Unix. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |